<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="make_a_post">New post</string>
    <string name="post_description">Post description</string>
    <string name="add_image">Take photo</string>
    <string name="post">POST</string>
    <string name="signup">Sign Up</string>
    <string name="POST">post</string>
</resources>