<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="10dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/nav_logo_whiteout"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/logo"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textUsername"
        android:hint="@string/username"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@id/etUsername"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/textPassword"
        android:inputType="textPassword"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#458eff"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#458eff"
        android:text="@string/signup" />

</RelativeLayout>