<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <TextView
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/post_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/Description"
        android:minLines="3"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:layout_below="@id/btnAddImage"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/etDescription"
        android:backgroundTint="@color/second"
        android:text="@string/add_image" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/ivImage"
        android:backgroundTint="@color/second"
        android:text="@string/post" />

</RelativeLayout>